--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="sujan_maharjan_1_ndsu_edu">sujan.maharjan.1@ndsu.edu</string>
     <string name="_415_819_3043">XXX-XXX-XXXX</string>
     <string name="title_activity_second">SecondActivity</string>
+    <string name="title_activity_image">ImageActivity</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
